[package]
name = "runner-nordic"
version = "0.1.0"
authors = ["Julien Cretin <cretin@google.com>", "Jean-Michel Picod <jmichel@google.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
critical-section = "1.1.1"
defmt = { version = "0.3.5", optional = true }
defmt-rtt = { version = "0.4.0", optional = true }
embedded-alloc = "0.5.0"
embedded-hal = "0.2.7"
embedded-storage = "0.3.0"
nrf52840-hal = { version="0.16.0", optional = true }
nrf52833-hal = { version="0.16.0", optional = true }
panic-abort = { version = "0.3.2", optional = true }
panic-probe = { version = "0.3.1", optional = true, features = ["print-defmt"] }
typenum = { version = "1.16.0", default-features = false }
rubble-nrf5x = { git = "https://github.com/jmichelp/rubble.git", optional = true, rev = "d545f4f" }
rubble = { git = "https://github.com/jmichelp/rubble.git", optional = true, rev = "d545f4f" }
usb-device = "0.2.9"
usbd-serial = "0.1.1"
wasefire-applet-api = { path = "../api" }
wasefire-board-api = { path = "../board" }
wasefire-interpreter = { path = "../interpreter" }
wasefire-logger = { path = "../logger" }
wasefire-scheduler = { path = "../scheduler" }
wasefire-store = { path = "../store" }

[features]
debug = [
  "dep:defmt",
  "dep:defmt-rtt",
  "dep:panic-probe",
  "wasefire-board-api/defmt",
  "wasefire-logger/defmt",
  "wasefire-scheduler/defmt",
]
release = ["dep:panic-abort"]
software-crypto = ["wasefire-board-api/software-crypto"]
software-crypto-aes256-gcm = ["wasefire-board-api/software-crypto-aes256-gcm"]
software-crypto-sha256 = ["wasefire-board-api/software-crypto-sha256"]
nrf52833 = [
  "dep:nrf52833-hal",
  "dep:rubble-nrf5x",
  "dep:rubble",
  "rubble-nrf5x?/52833"
]
nrf52840 = [
  "dep:nrf52840-hal",
  "dep:rubble-nrf5x",
  "dep:rubble",
  "rubble-nrf5x?/52840"
]
